--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <!-- Numeric Textfield -->
         <h2>volum of square pyramid caculator</h2>
         <hr />
+        <h5 style="color: green;"> fomula</h5>
+        <h4> V = 	(L x W x H) / 3 </h4>
         <p>input square pyramid's height</p>
         <div class="mdl-textfield mdl-js-textfield">
           <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="get_height">
@@ -39,12 +41,12 @@
           <label class="mdl-textfield__label" for="get_width">input width here ...</label>
           <span class="mdl-textfield__error">Input is not a number!</span>
         </div>
-        </div>
         <p>input square pyramid's length</p>
         <div class="mdl-textfield mdl-js-textfield">
           <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="get_length">
           <label class="mdl-textfield__label" for="get_length">input length here ...</label>
           <span class="mdl-textfield__error">Input is not a number!</span>
+        </div>
         </div>
         <br />
         <!-- Accent-colored raised button with ripple -->
