--- a/index.html
+++ b/index.html
@@ -32,24 +32,21 @@
         <p>input square pyramid's height</p>
         <div class="mdl-textfield mdl-js-textfield">
           <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="get_height">
-          <label class="mdl-textfield__label" for="get_height">input height here ...</label>
+          <label class="mdl-textfield__label" for="get_height">input height here ...(mm)</label>
           <span class="mdl-textfield__error">Input is not a number!</span>
         </div>
         <p>input square pyramid's width</p>
         <div class="mdl-textfield mdl-js-textfield">
           <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="get_width">
-          <label class="mdl-textfield__label" for="get_width">input width here ...</label>
+          <label class="mdl-textfield__label" for="get_width">input width here ...(mm)</label>
           <span class="mdl-textfield__error">Input is not a number!</span>
         </div>
         <p>input square pyramid's length</p>
         <div class="mdl-textfield mdl-js-textfield">
           <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="get_length">
-          <label class="mdl-textfield__label" for="get_length">input length here ...</label>
+          <label class="mdl-textfield__label" for="get_length">input length here ...(mm)</label>
           <span class="mdl-textfield__error">Input is not a number!</span>
         </div>
-        </div>
-        <br />
-        <!-- Accent-colored raised button with ripple -->
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
           onclick="Caculate()">
           Caculate
@@ -58,6 +55,10 @@
           <br />
           <p id="Answer"></p>
         </div>
+        </div>
+        <br />
+        <!-- Accent-colored raised button with ripple -->
+        
       </form>
     </main>
   </div>
