--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <span class="mdl-textfield__error">Input is not a number!</span>
         </div>
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          onclick="Caculate()">
+          onclick="Calculate()">
           Caculate
         </button>
         <div>
