--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
-  <title>volum of square pyramid caculator</title>
+  <title>volume of square pyramid calculator</title>
 </head>
 <body>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -16,7 +16,7 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">volum of square pyramid caculator</span>
+        <span class="mdl-layout-title">volume of square pyramid calculator</span>
       </div>
     </header>
     <main class="mdl-layout__content">
@@ -25,9 +25,9 @@
       </div>
       <form action="#" class="text-box">
         <!-- Numeric Textfield -->
-        <h2>volum of square pyramid caculator</h2>
+        <h2>volume of square pyramid calculator</h2>
         <hr />
-        <h5 style="color: green;"> fomula</h5>
+        <h5 style="color: green;"> formula</h5>
         <h4> V = 	(L x W x H) / 3 </h4>
         <p>input square pyramid's height</p>
         <div class="mdl-textfield mdl-js-textfield">
@@ -48,8 +48,8 @@
           <span class="mdl-textfield__error">Input is not a number!</span>
         </div>
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          onclick="Calculate()">
-          Caculate
+          onclick="CalculatePyramid()">
+          Calculate
         </button>
         <div>
           <br />
