--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   <title>volume of square pyramid calculator</title>
 </head>
 <body>
@@ -45,12 +47,14 @@
         <div class="mdl-textfield mdl-js-textfield">
           <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="get_length">
           <label class="mdl-textfield__label" for="get_length">input length here ...(mm)</label>
-          <span class="mdl-textfield__error">Input is not a number!</span>
+          <span class="mdl-textfield__error">Input should be a number!</span>
         </div>
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          onclick="CalculatePyramid()">
-          Calculate
-        </button>
+        <div>
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+            onclick="CalculatePyramid()">
+            Calculate
+          </button>
+        </div>
       </form>
       <div>
         <br />
